==Latest==
* Fixed R&D CFFA
* Fixed MC6845 special register value cases
* Implemented Videx Videoterm video
* Refactorized AppleIIVideo
* Fixed Apple language card
* Implemented Apple Silentype interface card
* Implemented Videx Videoterm card
* Implemented Apple Graphics Tablet interface card
* Implemented Apple Language Card
* Implemented AppleIISlotMemory
* Implemented R&D CFFA card
* Implemented low-level FDI format decoding
* Implemented FDI format Huffman compression
* Improved OE common function and type names
* Added applesoft-lite 0.4 to Briel Replica-1
* Added libdiskimage support to CFFA1
* Refactorized libdiskimage
* Implemented libdiskimage
* Fixed OEEmulation when removing the device
* Refactorized component lifecycle: update() is now only called on update, not on init
* Implemented audio player, added OESound
* Modified Device settings structure
* Implemented Apple Disk II
* Fixed add device to AddressDecoder after init
* Implemented select settings with values and labels
* Implemented Apple Disk II Interface Card
* Fixed auto-open canvas when adding a canvas device
* Refactorized AppleIIVideo memory retrieval
* Implemented AppleIIAddressDecoder
* Designed the Apple II memory and video interfaces
* Reimplemented AddressMux as AddressMapper
* Integrated MMU into AddressDecoder
* Added AudioInterface and MemoryInterface helper functions
* Refactorized Apple1ACI, AppleIIAudioIn, AppleIIAudioOut
* Implemented Apple-1 and Apple II volume controls
* Implemented auto-open canvas when adding a canvas device
* Fixed dragging of audio files to a canvas
* Implemented Apple II j-plus AN2 to video
* Fixed audio recorder lock
* Fixed Apple-1 strange noises when loading files
* Fixed video renderer and floating bus sync
* Improved component framework error messages
* Fixed video flicker when changing NTSC/PAL in mixed mode
* Implemented Apple II j-plus
* Implemented Apple II plus