@@ -85,7 +85,8 @@ typedef enum
 typedef enum
 {
     APPLEII_COLORKILLER_DID_CHANGE = CANVAS_NOTIFICATION_END,
-    APPLEII_MONITOR_DID_CHANGE,
+    APPLEII_MONITOR_WAS_CONNECTED,
+    APPLEII_MONITOR_WAS_DISCONNECTED,
 } AppleIIVideoNotification;
 
 typedef enum
